--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAtient US's</title>
+    <title>Patient US's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
@@ -104,22 +104,7 @@
                 Please select a valid state.
               </div>
             </div>
-            <div class="col-md-6">
-              <label for="validationCustom06" class="form-label">Allergies</label>
-                <div class="tags-input">
-                    <!--<span class="input-group-text" id="inputGroupPrepend">&#64;</span>-->
-                    <ul id="tags">
-                        <li *ngFor="let tag of tags; let i = index" class="tag">
-                            {{ tag }}
-                            <button class="delete-button" (click)="removeTag(i)">X</button>
-                          </li>
-                    </ul>
-                    <input type="text" id="input-tag"
-                    formControlName="inputTag"
-                    (keydown)="addTag($event)"
-                        placeholder="Enter allergies name" />
-                </div>
-              </div>
+           
 
 
               <h5 style="margin-top:1cm" for="validationCustomUsername" class="form-label">Emergency Contact</h5>
@@ -173,6 +158,7 @@
 
     </div>
 </div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
