#34 Correction of register with Google account and modification of the post method

--- a/angular-three/src/app/pages/Utilizador/user.component.scss
+++ b/angular-three/src/app/pages/Utilizador/user.component.scss
@@ -7,7 +7,7 @@ body {
   font-family: Arial, sans-serif;
   justify-content: center;
   align-items: center;
-  //height: 100vh; //TODO: TROCAR TIRAR ISTO PARA APARECER TUDO, ESTA TEMPORARIAMENTE
+  height: 100vh; //TODO: TROCAR TIRAR ISTO PARA APARECER TUDO, ESTA TEMPORARIAMENTE
 
   //background-attachment: scroll!important;
 }
