--- a/angular-three/src/app/pages/Utilizador/user.component.html
+++ b/angular-three/src/app/pages/Utilizador/user.component.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User US's</title>
+    <title>Users US's</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -21,21 +22,6 @@
                   <h3 class="title" >Register Patient Profile</h3>
               </div>
             </div>
-
-
-                <!--<div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="username">
-                    <label for="floatingInput">Username</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                </div>-->
-
-                <!--<div class="form-floating center">
-                    <button (click)="openModal()" class="btn btnBl btn-primary">Clique aqui</button>
-                </div>-->
-
           </div>
 
 
@@ -47,7 +33,7 @@
 
 <!-- The Modal -->
  <!-- (click)="onBackdropClick($event)" -->
-<div [ngStyle]="{'display': isModalOpen('registerPatientModal') ? 'block' : 'none'}" id="registerPatientModal"  class="modal" >
+ <div [ngStyle]="{'display': isModalOpen('registerPatientModal') ? 'block' : 'none'}" id="registerPatientModal" class="modal" >
     <div class="modal-content">
         <span (click)="closeModal('registerPatientModal')" class="close">&times;</span>
         <div>
@@ -132,3 +118,13 @@
 
     </div>
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+</body>
+
+
+</html>
