--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -462,13 +462,21 @@
           <div class="col-md-12"></div>
           <hr>
           <div class="col-md-12"></div>
+          <div class="dates-input">
+            <ul id="dates2">
+              <li *ngFor="let date of availabilitySlots2; let i = index" class="date">
+                {{ date.start }} - {{ date.end }}
+                <span class="delete-button" (click)="removeDate2(i)">X</span>
+              </li>
+            </ul>
+          </div>
           <div class="col-md-2"></div>
           <div class="col-md-8">
             <div class="input-group has-validation">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
-              <input type="datetime-local" class="form-control" id="validationStaffAvailabilityStart">
-              <input type="datetime-local" class="form-control" id="validationStaffAvailabilityEnd">
-              <span class="input-group-text" id="add"><i class="bi bi-plus-lg"></i></span>
+              <input type="datetime-local" class="form-control" id="validationStaffAvailabilityStart" formControlName="startTime">
+              <input type="datetime-local" class="form-control" id="validationStaffAvailabilityEnd" formControlName="endTime">
+              <span class="input-group-text" id="add" (click)="addDate2()" ><i class="bi bi-plus-lg"></i></span>
               <div class="valid-feedback">
                 Looks good!
               </div>
