--- a/angular-three/src/app/pages/Admin/admin/admin.component.scss
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.scss
@@ -285,7 +285,7 @@ table.table td .btn.manage:hover {
     margin-top: 10px;
   }
   
-  .dates-input ul#dates {
+  .dates-input ul#dates, .dates-input ul#dates2 {
     list-style-type: none;
     padding: 0;
     margin: 10px 0;
@@ -294,7 +294,7 @@ table.table td .btn.manage:hover {
     gap: 5px;
   }
   
-  .dates-input ul#dates li.date {
+  .dates-input ul#dates li.date, .dates-input ul#dates2 li.date {
     background-color: #e0f7fa;
     color: #00796b;
     border-radius: 5px;
@@ -305,7 +305,7 @@ table.table td .btn.manage:hover {
     font-weight: 500;
   }
   
-  .dates-input ul#dates li.date .delete-button {
+  .dates-input ul#dates li.date .delete-button, .dates-input ul#dates2 li.date .delete-button {
     background: none;
     border: none;
     color: #f44336;
@@ -315,7 +315,7 @@ table.table td .btn.manage:hover {
     cursor: pointer;
   }
   
-  .dates-input ul#dates li.date .delete-button:hover {
+  .dates-input ul#dates li.date .delete-button:hover, .dates-input ul#dates2 li.date .delete-button:hover {
     color: #d32f2f;
   }
   
