--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -14,20 +14,27 @@
         <h1 class="h1 title glow" style="padding: 1cm; color:white"> Patient </h1>
         <!--TODO: Alterar o formato de como esta a organização/divisão das divs par aficar de forma mas dinamica-->
         <div class="row row-cols-3">
-            <div class="container-lg col selectionDiv" (click)="openModal()">
+            <div class="container-lg col selectionDiv" (click)="openModal('UpdatePatientModal')">
                 <div class="form-floating mb-3">
                     <h3 class="title" >Update Patient Profile</h3>
                 </div>
 
             </div>
 
-            <div class="container-lg col selectionDiv" (click)="openModal()">
+            <div class="container-lg col selectionDiv" (click)="openModal('UpdatePatientModal')">
               <div class="form-floating mb-3">
                   <h3 class="title" >Delete Patient Profile</h3>
               </div>
 
           </div>
 
+          <div class="container-lg col selectionDiv" (click)="openModal('viewPatientModal')">
+            <div class="form-floating mb-3">
+                <h3 class="title" >View Patient Profile</h3>
+            </div>
+
+        </div>
+
 
         </div>
 
@@ -35,129 +42,268 @@
 
 </div>
 
-<!-- The Modal -->
- <!-- (click)="onBackdropClick($event)" -->
-<div  [id]="modalId" [ngStyle]="{'display': isModalOpen ? 'block' : 'none'}" class="modal" >
-    <div class="modal-content">
-        <span (click)="closeModal()" class="close">&times;</span>
-        <div>
 
-        <form  [formGroup]="myForm" (ngSubmit)="onSubmit()" class="row g-3 needs-validation" novalidate="">
-            <div class="col-md-4">
-              <label for="validationCustom01" class="form-label">Id</label>
-              <input type="text" class="form-control" id="validationCustom01" placeHolder="Id" required="">
-              <div class="valid-feedback">
-                Looks good!
-              </div>
+
+<div [ngStyle]="{'display': isModalOpen('UpdatePatientModal') ? 'block' : 'none'}" id="UpdatePatientModal" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('UpdatePatientModal')" class="close">&times;</span>
+      <div>
+
+        <form [formGroup]="myForm" (ngSubmit)="onUpdatePatient()" class="row g-3 needs-validation" novalidate="">
+          <div class="col-md-4">
+            <label for="validationCustom01" class="form-label">Name</label>
+            <input type="text" class="form-control" id="validationCustom01" placeholder="Name" formControlName="name" required="">
+            <div class="valid-feedback">
+              Looks good!
             </div>
-            <div class="col-md-4">
-              <label for="validationCustom01" class="form-label">Name</label>
-              <input type="text" class="form-control" id="validationCustom01" placeHolder="Name" required="">
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="validationCustom02" class="form-label">Date of Birth</label>
-              <input type="date" class="form-control" id="validationCustom02" required="">
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="validationCustom02" class="form-label">Medical Record Number</label>
-              <!--oninput="this.value = this.value.slice(0, 9)"-->
-              <input type="number" class="form-control" id="validationCustom02" min="202400000000" max="203000000000" >
-              <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback" id="invalid-feedback">Please enter a valid Medical Record Number.</div>
           </div>
 
 
-            <div class="col-md-4">
-              <label for="validationCustomUsername" class="form-label">Email</label>
-              <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
-                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
-                <div class="invalid-feedback">
-                  Please choose a email.
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="validationCustom02" class="form-label">Phone</label>
-              <!--oninput="this.value = this.value.slice(0, 9)"-->
-              <input type="number" class="form-control" id="validationCustom02" min="0" max="999999999" >
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-            <div class="col-md-4"></div>
 
-            <div class="col-md-3">
-              <label for="validationCustom04" class="form-label">Gender</label>
-              <select class="form-select" id="validationCustom04" required="">
-                <option selected="" disabled="" value="">Choose...</option>
-                <option>Male</option>
-                <option>Female</option>
-              </select>
+          <div class="col-md-4">
+            <label for="validationCustomUsername" class="form-label">User Email</label>
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+              <input type="text" class="form-control" id="validationCustomUserEmail" aria-describedby="inputGroupPrepend" formControlName="userEmail" required="">
               <div class="invalid-feedback">
-                Please select a valid state.
+                Please choose a userEmail.
               </div>
             </div>
-           
+          </div>
 
-
-              <h5 style="margin-top:1cm" for="validationCustomUsername" class="form-label">Emergency Contact</h5>
-
-
-            <div class="col-md-4">
-              <label for="validationCustomUsername" class="form-label">Name</label>
-              <div class="input-group has-validation">
-                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
+          <div class="col-md-4">
+            <label for="validationCustomUsername" class="form-label">Email</label>
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+              <input type="email" class="form-control" id="validationCustomEmail" aria-describedby="inputGroupPrepend" formControlName="email" required="">
+              <div class="invalid-feedback">
+                Please choose a valid email.
               </div>
             </div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="validationCustom02" class="form-label">Phone</label>
+            <input type="number" class="form-control" id="validationCustom02" formControlName="phone" min="0" max="999999999" required="">
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <label for="appointmentHistory" class="form-label">Appointment History</label>
+            <div class="dates-input">
+              <ul id="dates">
+                <li *ngFor="let date of appointmentHistory; let i = index" class="date">
+                  {{ date }}
+                  <button class="delete-button" (click)="removeDate(i)">X</button>
+                </li>
+              </ul>
+              <input type="date" id="input-date" (change)="addDate($event)" placeholder="Add appointment date" />
+            </div>
+          </div>
+
+          <h5 style="margin-top:1cm" class="form-label">Emergency Contact</h5>
 
             <div class="col-md-4">
-              <label for="validationCustomUsername" class="form-label">Email</label>
-              <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
-                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required="">
-                <div class="invalid-feedback">
-                  Please choose a email.
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="validationCustom02" class="form-label">Phone</label>
-              <!--oninput="this.value = this.value.slice(0, 9)"-->
-              <input type="number" class="form-control" id="validationCustom02" min="0" max="999999999" >
+              <label for="emergencyContactName" class="form-label">Name</label>
+              <input type="text" class="form-control" id="emergencyContactName" formControlName="emergencyContactName" required="">
               <div class="valid-feedback">
                 Looks good!
               </div>
             </div>
 
-            <div class="col-12">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required="">
-                <label class="form-check-label" for="invalidCheck">
-                  Agree to terms and conditions
-                </label>
-                <div class="invalid-feedback">
-                  You must agree before submitting.
-                </div>
+            <div class="col-md-4">
+              <label for="emergencyContactEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="emergencyContactEmail" formControlName="emergencyContactEmail" required="">
+              <div class="invalid-feedback">
+                Please choose a valid email.
               </div>
             </div>
-            <!--<div class="col-12">
-              <button class="btn btn-primary" type="submit">Submit form</button>
-            </div>-->
-          </form>
-        </div>
 
-    </div>
+            <div class="col-md-4">
+              <label for="emergencyContactPhone" class="form-label">Phone</label>
+              <input type="number" class="form-control" id="emergencyContactPhone" formControlName="emergencyContactPhone" min="0" max="999999999" required="">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+
+
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="invalidCheck" formControlName="agree" required="">
+              <label class="form-check-label" for="invalidCheck">
+                Agree to terms and conditions
+              </label>
+              <div class="invalid-feedback">
+                You must agree before submitting.
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit" [disabled]="myForm.invalid">Submit form</button>
+          </div>
+        </form>
+      </div>
+
+  </div>
 </div>
+
+<div [ngStyle]="{'display': isModalOpen('viewPatientModal') ? 'block' : 'none'}" id="viewPatientModal"  class="modal">
+  <div class="modal-content">   
+    
+      <span (click)="closeModal('viewPatientModal')" class="close">&times;</span>
+      <form [formGroup]="myForm" (ngSubmit)="viewPatient()" class="row g-3 needs-validation" novalidate="">
+      
+        <div  class="row g-3 needs-validation">
+        <div class="col-md-12"></div>
+          <div class="col-md-3">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+              <input type="text" class="form-control" disabled="" value="{{ patientProfileSingle.name.firstName }} {{ patientProfileSingle.name.middleNames }} {{ patientProfileSingle.name.lastName }}">
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+              <input type="text" class="form-control"aria-describedby="inputGroupPrepend" disabled="" value="{{ patientProfileSingle.email.fullEmail }}">
+            </div>
+          </div>
+
+
+          <div class="col-md-3">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-telephone-fill"></i></span>
+              <input type="text" class="form-control"  value="{{ patientProfileSingle.phone.number }}" disabled>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-3">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.userEmail.fullEmail }}" disabled>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-calendar-date"></i></span>
+              <input type="date" class="form-control" [value]="formatDateToISO(patientProfileSingle.dateOfBirth)"  disabled >
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.gender }}" disabled>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.medicalRecordNumber.number }}" disabled>
+            </div>
+          </div>
+
+          <hr>
+
+
+
+          <h5 class="form-label">Emergency Contact</h5>
+
+
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.nameEmergency }}" disabled>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.emailEmergency.fullEmail }}" disabled>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-4">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
+              <input type="text" class="form-control" value="{{ patientProfileSingle.phoneEmergency.number }}" disabled>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="col-md-12"></div>
+          <hr>
+          <div class="col-md-1"></div>
+          <div class="col-md-5">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+              <span class="input-group-text" id="add">Appointment History</span>
+            </div>
+            <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
+              <thead>
+                <tr>
+                  <tr>
+                    <th>#</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of patientProfileSingle.appointmentHistory; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ request }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="col-md-5">
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
+              <span class="input-group-text" id="add">Allergies</span>
+            </div>
+            <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
+              <thead>
+                <tr>
+                  <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let request of patientProfileSingle.allergies; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ request }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+
+          <div class="col-md-2"></div>
+
+        </div>
+      
+    </form>
+  </div>
+</div>
+
+
 
 
 
