--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -14,27 +14,31 @@
 
         <h1 class="h1 title glow" style="padding: 1cm; color:white"> Patient </h1>
         <!--TODO: Alterar o formato de como esta a organização/divisão das divs par aficar de forma mas dinamica-->
-        <div class="row row-cols-3">
-            <div class="container-lg col selectionDiv" (click)="openModal('UpdatePatientModal')">
-                <div class="form-floating mb-3">
-                    <h3 class="title" >Update Patient Profile</h3>
-                </div>
-
+        <div class="row g-3">
+          <div class="container col-md-4">
+            <div class="container-lg  selectionDiv" (click)="openModal('UpdatePatientModal')">
+              <div class="form-floating mb-3">
+                  <h3 class="title" >Update Patient Profile</h3>
+              </div>
             </div>
+          </div>
 
-            <div class="container-lg col selectionDiv" (click)="openModal('UpdatePatientModal')">
+          <div class="container col-md-4">
+            <div class="container-lg  selectionDiv" (click)="openModal('UpdatePatientModal')">
               <div class="form-floating mb-3">
                   <h3 class="title" >Delete Patient Profile</h3>
               </div>
-
+            </div>
           </div>
 
-          <div class="container-lg col selectionDiv" (click)="openModal('viewPatientModal')">
-            <div class="form-floating mb-3">
+          <div class="container col-md-4">
+            <div class="container-lg selectionDiv" (click)="openModal('viewPatientModal')">
+              <div class="form-floating mb-3">
                 <h3 class="title" >View Patient Profile</h3>
+              </div>
             </div>
-
-        </div>
+          </div>
+    
 
 
         </div>
@@ -57,13 +61,13 @@
               <div class="col-md-3">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.name.firstName }} {{patientProfileSingle.name.middleNames}} {{patientProfileSingle.name.lastName}}">
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.name.firstName }} {{patientProfileSingle.name.middleNames}} {{patientProfileSingle.name.lastName}}" formControlName="name">
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
-                  <input type="text" class="form-control"aria-describedby="inputGroupPrepend"  value="{{ patientProfileSingle.email.fullEmail }}">
+                  <input type="text" class="form-control"aria-describedby="inputGroupPrepend"  value="{{ patientProfileSingle.email.fullEmail }}" formControlName="email">
                 </div>
               </div>
     
@@ -71,7 +75,7 @@
               <div class="col-md-3">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-telephone-fill"></i></span>
-                  <input type="text" class="form-control"  value="{{ patientProfileSingle.phone.number }}" >
+                  <input type="text" class="form-control"  value="{{ patientProfileSingle.phone.number }}" formControlName="phone">
                 </div>
               </div>
     
@@ -80,34 +84,21 @@
               <div class="col-md-3">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.userEmail.fullEmail }}" >
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.userEmail.fullEmail }}" formControlName="userEmail">
                 </div>
               </div>
     
-              <div class="col-md-4">
-                <div class="input-group has-validation">
-                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-calendar-date"></i></span>
-                  <input type="date" class="form-control" [value]="formatDateToISO(patientProfileSingle.dateOfBirth)"   >
-                </div>
-              </div>
+            
     
               <div class="col-md-4">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.gender }}" >
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.gender }}" formControlName="gender">
                 </div>
               </div>
     
     
     
-              <div class="col-md-4">
-                <div class="input-group has-validation">
-                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.medicalRecordNumber.number }}" >
-                </div>
-              </div>
-    
-              <hr>
     
     
     
@@ -118,14 +109,14 @@
               <div class="col-md-4">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.nameEmergency }}" >
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.nameEmergency }}" formControlName="emergencyContactName">
                 </div>
               </div>
     
               <div class="col-md-4">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.emailEmergency.fullEmail }}" >
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.emailEmergency.fullEmail }}" formControlName="emergencyContactEmail">
                 </div>
               </div>
     
@@ -134,18 +125,16 @@
               <div class="col-md-4">
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
-                  <input type="text" class="form-control" value="{{ patientProfileSingle.phoneEmergency.number }}" >
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.phoneEmergency.number }}" formControlName="emergencyContactPhone">
                 </div>
               </div>
     
     
     
     
-    
               <div class="col-md-12"></div>
               <hr>
-              <div class="col-md-1"></div>
-              <div class="col-md-5">
+              <div class="col-md-12"> 
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
                   <span class="input-group-text" id="add">Appointment History</span>
@@ -153,21 +142,30 @@
                 <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
                   <thead>
                     <tr>
-                      <tr>
-                        <th>#</th>
-                        <th>Date</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let request of patientProfileSingle.appointmentHistory; let i = index">
-                        <td>{{ i + 1 }}</td>
-                        <td>{{ request }}</td>
+                      <th>#</th>
+                      <th>Date</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let request of patientProfileSingle.appointmentHistory; let i = index">
+                      <td>{{ i + 1 }}</td>
+                      <td>{{ request }}</td>
                     </tr>
                   </tbody>
                 </table>
+              
+                <div class="dates-input ms-10"> <!-- Dates input section -->
+                  <ul id="dates">
+                    <li *ngFor="let date of appointmentHistory; let i = index" class="date">
+                      {{ date }}
+                      <button type="button" class="delete-button" (click)="removeDate(i)">X</button>
+                    </li>
+                  </ul>
+                  <input type="date" id="input-date" (change)="addDate($event)" placeholder="Add appointment date" />
+                </div>
               </div>
-    
-              <div class="col-md-5">
+              
+              <div class="col-md-12"> 
                 <div class="input-group has-validation">
                   <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
                   <span class="input-group-text" id="add">Allergies</span>
@@ -175,19 +173,30 @@
                 <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
                   <thead>
                     <tr>
-                      <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let request of patientProfileSingle.allergies; let i = index">
-                        <td>{{ i + 1 }}</td>
-                        <td>{{ request }}</td>
+                      <th>#</th>
+                      <th>Name</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let request of patientProfileSingle.allergies; let i = index">
+                      <td>{{ i + 1 }}</td>
+                      <td>{{ request }}</td>
                     </tr>
                   </tbody>
-                </table>
-              </div>
+                </table>  
+              
+                <div class="col-md-6">
+                  <label for="validationCustom06" class="form-label">Allergies</label>
+                  <div class="tags-input">
+                    <ul id="tags">
+                      <li *ngFor="let tag of tags; let i = index" class="tag">
+                        {{ tag }}
+                        <button class="delete-button" (click)="removeTag(i)">X</button>
+                      </li>
+                    </ul>
+                    <input type="text" id="input-tag" (keydown)="addTag($event)" placeholder="Enter allergies name" />
+                  </div>
+                </div>
     
     
               <div class="col-md-2"></div>
