#36 Editing patient profile as an admin

--- a/angular-three/src/app/pages/Admin/admin/admin.component.scss
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.scss
@@ -279,6 +279,13 @@ table.table td .btn.manage:hover {
     overflow-y: scroll;
 }
 
+.table-over-update{
+  display: block; 
+  height: 20vh; 
+  overflow-y: scroll;
+}
+
+
 
 
 .dates-input {
