--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -142,7 +142,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let request of patientProfileSingle.appointmentHistory; let i = index">
+                    <tr *ngFor="let request of appointmentHistory; let i = index">
                       <td>{{ i + 1 }}</td>
                       <td>{{ request }}</td>
                     </tr>
