--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -31,7 +31,7 @@
               </div>
             </div>
 
-            
+
             <div class="container col-md-4">
               <div class="container-lg  selectionDiv" (click)="openModal('registerStaffModal')">
                 <div class="form-floating mb-3">
@@ -319,7 +319,7 @@
             </div>
           </div>
 
-          
+
           <div class="col-md-3">
             <div class="input-group has-validation">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-telephone-fill"></i></span>
@@ -328,7 +328,7 @@
           </div>
 
 
-          
+
           <div class="col-md-3">
             <div class="input-group has-validation">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
@@ -450,8 +450,187 @@
   </div>
 </div>
 
+<div [ngStyle]="{'display': isModalOpen('UpdatePatientModal') ? 'block' : 'none'}" id="UpdatePatientModal" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('UpdatePatientModal')" class="close">&times;</span>
+
+        <form [formGroup]="patientUpdateForm" class="row g-3 needs-validation" novalidate="">
+          <div *ngIf="patientProfileUpdate">
+            <div  class="row g-3 needs-validation">
+            <div class="col-md-12"></div>
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.name.firstName }} {{patientProfileUpdate.name.middleNames}} {{patientProfileUpdate.name.lastName}}" formControlName="name">
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                  <input type="text" class="form-control"aria-describedby="inputGroupPrepend"  value="{{ patientProfileUpdate.email.fullEmail }}" formControlName="email">
+                </div>
+              </div>
+    
+    
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-telephone-fill"></i></span>
+                  <input type="text" class="form-control"  value="{{ patientProfileUpdate.phone.number }}" formControlName="phone">
+                </div>
+              </div>
+    
+    
+    
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.userEmail.fullEmail }}" formControlName="userEmail">
+                </div>
+              </div>
+    
+            
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.gender }}" formControlName="gender">
+                </div>
+              </div>
+    
+    
+    
+    
+    
+    
+              <h5 class="form-label">Emergency Contact</h5>
+    
+    
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.nameEmergency }}" formControlName="emergencyContactName">
+                </div>
+              </div>
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.emailEmergency.fullEmail }}" formControlName="emergencyContactEmail">
+                </div>
+              </div>
+    
+    
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileUpdate.phoneEmergency.number }}" formControlName="emergencyContactPhone">
+                </div>
+              </div>
+    
+    
+    
+    
+              <hr>
+              <div class="col-md-2"></div>
+
+              <div class="col-md-3"> 
+                <div class="input-group has-validation">
+                  <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+                  <span class="input-group-text" style="width:60%" id="add">Appointment History</span>
+                </div>
+                <table class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Date</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let request of appointmentHistoryUpdate; let i = index">
+                      <td>{{ i + 1 }}</td>
+                      <td>{{ request }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              
+                <div class="col-md-6"> <!-- Dates input section -->
+                  <div class="dates-input ms-10"> <!-- Dates input section -->
+                  <ul id="dates">
+                    
+                    <li *ngFor="let date of appointmentHistoryUpdate; let i = index" class="date">
+                      {{ date }}
+                      <button type="button" class="delete-button" (click)="removeDatePUpdate(i)">X</button>
+                    </li>
+                  </ul>
+                  <input type="date" id="input-date" (change)="addDatePUpdate($event)" placeholder="Add appointment date" />
+                </div>
+              </div>
+              <div class="col-md-1"></div>
+
+              
+              <div class="col-md-2"></div>
+
+              <div class="col-md-3">
+  
+
+                <div class="input-group has-validation">
+                  <span class="input-group-text" style="width:20%" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                  <span class="input-group-text" style="width:60%" id="add">Allergies</span>
+                </div>
+                <table class="table table-striped table-hover table-over-update" style="scrollbar-width: none;">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Name</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let request of tags; let i = index">
+                      <td>{{ i + 1 }}</td>
+                      <td>{{ request }}</td>
+                    </tr>
+                  </tbody>
+                </table>  
+            </div>
+              
+                <div class="col-md-6">
+                  <label for="validationCustom06" class="form-label">Allergies</label>
+                  <div class="tags-input">
+                    <ul id="tags">
+                      <li *ngFor="let tag of tags; let i = index" class="tag">
+                        {{ tag }}
+                        <button class="delete-button" (click)="removeTag(i)">X</button>
+                      </li>
+                    </ul>
+                    <input type="text" id="input-tag" (keydown)="addTag($event)" placeholder="Enter allergies name" />
+                  </div>
+                </div>
+
+              <div class="col-md-1"></div>
+          </div>
+         
 
 
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="invalidCheck" formControlName="agree" required="">
+              <label class="form-check-label" for="invalidCheck">
+                Agree to terms and conditions
+              </label>
+              <div class="invalid-feedback">
+                You must agree before submitting.
+              </div>
+            </div>
+          </div>
+      
+          <button class="btn btn-primary" (click)="onUpdatePatient()">Submit form</button>
+        </div>
+      </form>
+  </div>
+</div>
 
 
 
